--- a/Day2Tests/Day2Tests.csproj
+++ b/Day2Tests/Day2Tests.csproj
@@ -20,4 +20,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Day2\Day2.csproj" />
+    </ItemGroup>
+
 </Project>
